--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.0'
+    testImplementation 'org.mockito:mockito-core:2.26.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:2.26.0'
 }
 
 test {
