--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.squareup.okhttp3:okhttp' //https://www.baeldung.com/guide-to-okhttp
     runtimeOnly 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.23.2' //wiremock.org
 }
 
 test {
